docs(spring): the 3-GC page's root cause is falsified, and 25 of its 38 classes already passed
Re-triage of docs/known-issues/spring-springboot-hibernate-reactive-3gc-newly-visible-fails-20260826.md
against origin/dev, one class per process, HotSpot control for every CratonVM
failure.

The root cause is not the cause. That page attributed a JSON-property-order
symptom to Class.getDeclaredMethods() ordering. Its own two observations already
contradict each other: BOTH VMs list getSomeDouble before isSomeBoolean, so no
enumeration order on either VM produces HotSpot's asserted
{"name","someBoolean","someDouble"}. Measured (probes/PersonOrderProbe.java,
added here), the two VMs emit BYTE-IDENTICAL output from Jackson 3 AND Jackson 2
with the divergent method order in place -- because Jackson 3 sorts
alphabetically and Jackson 2 uses field order, and neither reads method order.
Converter selection is identical too (probes/JacksonPickProbe.java).

The ordering divergence is real and is kept as an observation, explicitly
without a victim: nothing on the page is caused by it, and before anyone spends
on replicating HotSpot's order they should find a consumer whose output actually
moves. The one nominated does not.

Counts, from 38 listed classes:

  fixed here                        5
  already passed when re-run       25
  fail identically on HotSpot       5
  functional defects remaining      2
  throughput items (not failures)   2

Spring Framework: every class attributed to the getDeclaredMethods theory
passes. 3 fixed (ZeroCopyIntegrationTests and
RequestMappingMessageConversionIntegrationTests are ONE defect -- the zero-copy
sendFile 0-byte body, e401a173d; RetryPolicyTests, 3b4d1e9cd).

Spring Boot: every Jackson- and health-named class passes, as does
KafkaAutoConfigurationIntegrationTests -- the Testcontainers flake that page
flagged as worth re-running before assuming it was new. NestedPathTests fixed
(cdab6441d). Four fail identically on HotSpot with matching co